--- a/index.html
+++ b/index.html
@@ -44,11 +44,7 @@
                 };
             })();
     window.isDevice = (/android|webos|iphone|ipad|ipod|blackberry|iemobile|opera mini/i.test(((navigator.userAgent || navigator.vendor || window.opera)).toLowerCase()));
-    window.addEventListener("DOMContentLoaded", event => {
-        const audio = document.querySelector("audio");
-        audio.volume = 0.2;
-        audio.play();
-        });
+    document.getElementById('background').play();
     var loaded = false;
     var init = function () {
         if (loaded) return;
